--- a/css/theme/rootpi.css
+++ b/css/theme/rootpi.css
@@ -219,20 +219,20 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #161616;
+  color: #636363;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
   transition: color .15s ease; }
 
 .reveal a:hover {
-  color: #494949;
+  color: #969696;
   text-shadow: none;
   border: none; }
 
 .reveal .roll span:after {
   color: #fff;
-  background: black; }
+  background: #3d3d3d; }
 
 /*********************************************
  * IMAGES
@@ -254,7 +254,7 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #161616;
+  border-color: #636363;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
@@ -262,31 +262,31 @@ body {
  *********************************************/
 .reveal .controls .navigate-left,
 .reveal .controls .navigate-left.enabled {
-  border-right-color: #161616; }
+  border-right-color: #636363; }
 
 .reveal .controls .navigate-right,
 .reveal .controls .navigate-right.enabled {
-  border-left-color: #161616; }
+  border-left-color: #636363; }
 
 .reveal .controls .navigate-up,
 .reveal .controls .navigate-up.enabled {
-  border-bottom-color: #161616; }
+  border-bottom-color: #636363; }
 
 .reveal .controls .navigate-down,
 .reveal .controls .navigate-down.enabled {
-  border-top-color: #161616; }
+  border-top-color: #636363; }
 
 .reveal .controls .navigate-left.enabled:hover {
-  border-right-color: #494949; }
+  border-right-color: #969696; }
 
 .reveal .controls .navigate-right.enabled:hover {
-  border-left-color: #494949; }
+  border-left-color: #969696; }
 
 .reveal .controls .navigate-up.enabled:hover {
-  border-bottom-color: #494949; }
+  border-bottom-color: #969696; }
 
 .reveal .controls .navigate-down.enabled:hover {
-  border-top-color: #494949; }
+  border-top-color: #969696; }
 
 /*********************************************
  * PROGRESS BAR
@@ -295,7 +295,7 @@ body {
   background: rgba(0, 0, 0, 0.2); }
 
 .reveal .progress span {
-  background: #161616;
+  background: #636363;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
